# fornado-planner-mcp

./: .env.example  .gitignore  .replit  AZURE_NATIVE_DEPLOYMENT.md  BLUEROCK_INTEGRATION_PLAN.md  DEPLOYMENT_OPTIONS_COMPARISON.md  QUICKSTART.md  README.md  TRANSFORMATION_PLAN.md  azure_app_manifest.json  pyproject.toml  replit.md  requirements.txt
attached_assets/: Pasted--Replit-Project-Microsoft-Planner-MCP-Server-Project-Overview-Build-a-production-ready-MCP-1762965653792_1762965653793.txt  Pasted--workspace-python-cli-mcp-cli-py-list-tasks-plan-id-123-Traceback-most-recent-call-last-Fil-1762968893049_1762968893050.txt
cli/: mcp_cli.py
docs/: AZURE_APP_FIX.md  AZURE_PERMISSIONS_FIX.md  TESTING_GUIDE.md  USER_AUTHENTICATION.md
scripts/: fix_git_author.sh  setup_azure_app.py
src/: config.py  http_test_server.py  server.py
src/auth/: microsoft.py
src/cache/: interface.py  memory.py
src/graph/: client.py  exceptions.py  models.py
src/tools/: task_tools.py
src/utils/: logger.py
